--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <h3>Rower & Rowing Coach</h3>
             <p><strong>G.S.R. 'Aegir'</strong> | September 2010 - July 2015</p>
             <ul>
-            <li>Coached women’s rowing teams, focusing on physical, emotional, and nutritional guidance.</li>
+            <li>Coached top-class women’s rowing teams, focusing on physical, emotional, and nutritional guidance.</li>
             <li>Competed as a rower in top-class sports, training 8-9 times a week.</li>
             <li>Participated in committees, contributing to recruitment, promotional campaigns, and member engagement.
             </li>
