add hallmark experience

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
             <p><strong>Hallmark Benelux</strong> | October 2018 - August 2020</p>
             <ul>
                 <li>Built a data platform on Microsoft Azure for Data Science and BI reporting.</li>
+                <li>Developed a recommendation engine to optimize inventory for seasonal sales, such as Christmas cards, across retail stores.</li>
             </ul>
 
             <h3>Consultant and Data Engineer</h3>
