--- a/index.html
+++ b/index.html
@@ -112,16 +112,16 @@
             <ul>
                 <li>Design and implement scalable, cloud-based solutions enabling real-time analytics.</li>
                 <li>Lead strategic initiatives to drive innovation with modern data architectures.</li>
-                <li>Align technology strategies with business objectives.</li>
+                <li>Align technology strategies with business objectives, ensuring seamless integration and operational excellence.</li>
             </ul>
 
             <h3>Tech Lead Data Engineering</h3>
             <p><strong>Nederlandse Loterij</strong> | August 2023 - September 2024</p>
             <p>Rijswijk, South Holland, Netherlands</p>
             <ul>
-                <li>Specialized in designing and implementing scalable, real-time data solutions.</li>
+                <li>Specialized in designing and implementing scalable, real-time data solutions utilizing Azure Functions, CosmosDB and Event Hubs.</li>
                 <li>Focused on cloud architecture and event-driven systems.</li>
-                <li>Empowered and coached teams to deliver impactful data capabilities.</li>
+                <li>Empowered and coached teams to deliver impactful data capabilities, fostering a culture of continuous improvement.</li>
             </ul>
 
             <h3>Data Engineer & Platform Architect</h3>
@@ -133,8 +133,8 @@
             <h3>Data Engineer</h3>
             <p><strong>Hallmark Benelux</strong> | October 2018 - August 2020</p>
             <ul>
-                <li>Built a data platform on Microsoft Azure for Data Science and BI reporting.</li>
-                <li>Developed a recommendation engine to optimize inventory for seasonal sales, such as Christmas cards, across retail stores.</li>
+                <li>Built a data platform on Microsoft Azure for Data Science and BI reporting, utilizing services such as Databricks, Azure Data Factory, Azure SQL Database, and Power BI.</li>
+                <li>Developed a recommendation engine using Python to optimize inventory for seasonal sales, such as Christmas cards, across retail stores.</li>
             </ul>
 
             <h3>Consultant and Data Engineer</h3>
@@ -148,7 +148,7 @@
                 <li><strong>Client: ABN AMRO Bank N.V.:</strong></li>
             <ul>
                 <li>Ran customer interaction and financial data analytics for conversational and offline/online customer
-                    touchpoints
+                    touch-points using Python.
                 </li>
                 <li>Assist in data-driven decision-making to enhance online customer experience.</li>
             </ul>
