add new content

--- a/index.html
+++ b/index.html
@@ -115,20 +115,32 @@
             <p>GitHub: <a href="https://github.com/HiddevH" target="_blank">github.com/HiddevH</a></p>
         </div>
 
-        <div class="section summary">
-            <h2>Summary</h2>
-            <p>As a Cloud Data Architect in the iGaming industry, I design scalable, cloud-native solutions on Microsoft Azure, processing billions of transactions monthly. By leveraging AI, real-time analytics, and platforms like Databricks, Kafka, and Azure Functions, I enable intelligent decision-making and personalized customer experiences at scale.</p>
-            <p>With experience spanning retail, e-commerce, and fintech, I combine deep technical expertise with strategic vision. Passionate about innovation, I specialize in building AI-driven ecosystems and high-performance data pipelines that support operational excellence.</p>
-        </div>
+<div class="section summary">
+    <h2>Summary</h2>
+    <p>
+        <strong>Cloud Data Architect</strong> with a proven track record in designing and implementing
+        scalable, cloud-native solutions on <strong>Microsoft Azure</strong>, processing billions of transactions monthly.
+        I specialize in <strong>real-time data analytics</strong>, <strong>event-driven architectures</strong>, and platforms like
+        <strong>Databricks, Kafka, and Azure Functions</strong> to drive intelligent decision-making and personalized
+        customer experiences.
+    </p>
+    <p>
+        Beyond technical expertise, I am a <strong>strategic leader</strong> who mentors engineering teams, fosters
+        innovation, and drives best practices in <strong>cloud architecture and data governance</strong>.
+        With experience spanning <strong>iGaming, retail, e-commerce, and fintech</strong>, I bridge the gap
+        between <strong>data strategy and execution</strong>, ensuring high-performance data ecosystems that support
+        both business growth and regulatory compliance.
+    </p>
+</div>
 
         <div class="section skills">
             <h2>Key Skills</h2>
             <ul>
                 <li>Cloud-Native & Event-Driven Architecture</li>
                 <li>Real-Time Data Processing</li>
+                <li>Data Governance & Compliance (Wwft, KOA)</li>
                 <li>Technical Leadership & Team Mentorship</li>
                 <li>Strategic Planning & Stakeholder Management</li>
-                <li>Data Governance & Compliance (Wwft, KOA)</li>
             </ul>
         </div>
 
