--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <p>GitHub: <a href="https://github.com/HiddevH" target="_blank">github.com/HiddevH</a></p>
         </div>
 
-<div class="section summary">
+        <div class="section summary">
     <h2>Summary</h2>
     <p>
         <strong>Cloud Data Architect</strong> with a proven track record in designing and implementing
@@ -209,54 +209,90 @@
                 </ul>
             </ul>
 
-            <h2>Other Experience</h2>
-            <!-- Helloprint Section -->
-            <div class="company-header">
-                <img src="images/helloprint_logo.png" alt="Helloprint Logo">
-                <span class="company-name">Helloprint</span>
+            <div class="section experience">
+                <h2>Other Experience</h2>
+
+                <!-- Helloprint Section -->
+                <div class="company-header">
+                    <img src="images/helloprint_logo.png" alt="Helloprint Logo">
+                    <span class="company-name">Helloprint</span>
+                </div>
+                <p>Rotterdam, Netherlands</p>
+                <div class="job-title">Management Trainee / Team Lead New Countries</div>
+                <p><span class="date">October 2016 - March 2017</span></p>
+                <ul>
+                    <li><strong>Market Expansion:</strong> Led a team responsible for rapid growth in new countries, launching operations in multiple markets.</li>
+                    <li><strong>Product Ownership:</strong> Acted as product owner, coordinating between teams to ensure timely delivery and market fit.</li>
+                </ul>
+
+                <!-- Stedin Internship Section -->
+                <div class="company-header">
+                    <img src="images/stedin_logo.jpg" alt="Stedin Logo">
+                    <span class="company-name">Stedin</span>
+                </div>
+                <p>Rotterdam, Netherlands</p>
+                <div class="job-title">Graduate Intern – Smart Grids & EV Charging Research</div>
+                <p><span class="date">February 2016 - July 2016</span></p>
+                <ul>
+                    <li><strong>EV Charging Optimization:</strong> Researched <strong>demand-side management</strong> to optimize grid efficiency for electric vehicle (EV) charging.</li>
+                    <li><strong>Algorithm Development:</strong> Designed and tested <strong>valet charging algorithms</strong> to reduce energy grid stress.</li>
+                    <li><strong>Impact & Recognition:</strong> Achieved a <strong>grade of 8.5/10</strong> and received <strong>media coverage</strong> for sustainable EV research.</li>
+                </ul>
+
+                <!-- Stork Internship Section -->
+                <div class="company-header">
+                    <img src="images/stork_logo.jpg" alt="Stork Logo">
+                    <span class="company-name">Stork</span>
+                </div>
+                <p>Groningen, Netherlands</p>
+                <div class="job-title">Graduate Intern – Change Management</div>
+                <p><span class="date">September 2014 - January 2015</span></p>
+                <ul>
+                    <li><strong>Process Optimization:</strong> Researched employee adoption of a new hour registration system, analyzing change resistance.</li>
+                    <li><strong>Change Management Strategy:</strong> Developed actionable recommendations to ensure a smooth system rollout.</li>
+                    <li><strong>Impact Measurement:</strong> Achieved a <strong>grade of 8.5/10</strong> for research quality and effectiveness.</li>
+                </ul>
+
+                <!-- G.S.R. 'Aegir' Section -->
+                <div class="company-header">
+                    <img src="images/ster.png" alt="G.S.R. 'Aegir' Logo">
+                    <span class="company-name">G.S.R. Aegir</span>
+                </div>
+                <p>Groningen, Netherlands</p>
+                <div class="job-title">Rower & Rowing Coach</div>
+                <p><span class="date">September 2010 - July 2015</span></p>
+                <ul>
+                    <li><strong>Coaching & Athlete Development:</strong> Trained top-class women’s rowing teams, providing physical, emotional, and nutritional guidance to optimize performance.</li>
+                    <li><strong>Competitive Rowing:</strong> Competed at the national level, training 8-9 times per week.</li>
+                    <li><strong>Community Engagement:</strong> Participated in club committees, leading initiatives in recruitment, promotional campaigns, and member engagement.</li>
+                </ul>
             </div>
-            <p>Rotterdam, Netherlands</p>
-            <div class="job-title">Management Trainee / Team Lead New Countries</div>
-            <p><span class="date">October 2016 - March 2017</span></p>
-            <ul>
-                <li><strong>Market Expansion:</strong> Led a team responsible for rapid growth in new countries, launching operations in multiple markets.</li>
-                <li><strong>Product Ownership:</strong> Acted as product owner, coordinating between teams to ensure timely delivery and market fit.</li>
-            </ul>
-              <!-- Stedin Internship Section -->
-            <div class="company-header">
-                <img src="images/stedin_logo.jpg" alt="Stedin Logo">
-                <span class="company-name">Stedin</span>
-            </div>
-            <p>Rotterdam, Netherlands</p>
-            <div class="job-title">Intern - Smart Grids & EV Charging Research</div>
-            <p><span class="date">January 2016 - August 2016</span></p>
-            <ul>
-                <li><strong>EV Charging Optimization:</strong> Conducted research on demand management for electric vehicle charging, providing insights to reduce stress on the electrical grid.</li>
-            </ul>
 
-    <!-- G.S.R. 'Aegir' Section -->
-    <div class="company-header">
-        <img src="images/ster.png" alt="G.S.R. 'Aegir' Logo">
-        <span class="company-name">G.S.R. 'Aegir'</span>
-    </div>
-    <p>Groningen, Netherlands</p>
-    <div class="job-title">Rower & Rowing Coach</div>
-    <p><span class="date">September 2010 - July 2015</span></p>
-    <ul>
-        <li><strong>Coaching & Athlete Development:</strong> Trained top-class women’s rowing teams, providing physical, emotional, and nutritional guidance to optimize performance.</li>
-        <li><strong>Competitive Rowing:</strong> Competed in elite rowing competitions, training 8-9 times per week at a high-performance level.</li>
-        <li><strong>Community Engagement:</strong> Participated in club committees, leading initiatives in recruitment, promotional campaigns, and member engagement.</li>
-    </ul>
-
-    <!-- Education Section -->
-    <h2>Education</h2>
-
-    <div class="job-title">Rotterdam School of Management, Erasmus University</div>
-    <p><em>Master of Science (MSc), Business Information Management | 2015 - 2016</em></p>
-
-    <div class="job-title">Rijksuniversiteit Groningen / University of Groningen</div>
-    <p><em>Bachelor of Science (B.Sc.), Technology Management | 2010 - 2015</em></p>
+        <!-- Technical & industry-recognized certificates -->
+        <div class="section certifications">
+        <h2>Certifications & Licenses</h2>
+        <ul>
+            <li><strong>Certified Kubernetes Application Developer</strong> (Linux Foundation)</li>
+            <li><strong>Scrum PSPO I Certificate</strong> (Scrum.org)</li>
+            <li><strong>Data Science in Python Certificate</strong> (DataCamp)</li>
+            <li><strong>Salesforce DMP – Technical Track</strong> (Salesforce, UK)</li>
+            <li><strong>Business Intelligence Track</strong> (Capgemini)</li>
+            <li><strong>Empathic Listening</strong> (Capgemini)</li>
+            <li><strong>The Pyramid Principle</strong> (Capgemini)</li>
+            <li><strong>Teamwork Course</strong> (University of Groningen)</li>
+            <li><strong>Effective Communication Course</strong> (University of Groningen)</li>
+            <li><strong>Interview Course</strong> (University of Groningen)</li>
+        </ul>
         </div>
-    </div>
+        <!-- Education Section -->
+        <h2>Education</h2>
+
+        <div class="job-title">Rotterdam School of Management, Erasmus University</div>
+        <p><em>Master of Science (MSc), Business Information Management | 2015 - 2016</em></p>
+
+        <div class="job-title">Rijksuniversiteit Groningen / University of Groningen</div>
+        <p><em>Bachelor of Science (B.Sc.), Technology Management | 2010 - 2015</em></p>
+            </div>
+        </div>
 </body>
 </html>
