update key skills section

--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
 
         <div class="section skills">
             <h2>Key Skills</h2>
-            <ul>
-                <li>Cloud-Native & Event-Driven Architecture</li>
-                <li>Real-Time Data Processing</li>
-                <li>Data Governance & Compliance (Wwft, KOA)</li>
-                <li>Technical Leadership & Team Mentorship</li>
-                <li>Strategic Planning & Stakeholder Management</li>
-            </ul>
+                <ul>
+                    <li><strong>Cloud-Native Architecture & Event-Driven Systems</strong></li>
+                    <li><strong>Real-Time Data Processing & Streaming Analytics</strong></li>
+                    <li><strong>Data Governance, Security & Compliance (Wwft, KOA)</strong></li>
+                    <li><strong>Technical Leadership & Team Mentorship</strong></li>
+                    <li><strong>Strategic Planning & Stakeholder Management</strong></li>
+                </ul>
         </div>
 
         <div class="section experience">
