update certifications and courses

--- a/index.html
+++ b/index.html
@@ -270,8 +270,9 @@
 
         <!-- Technical & industry-recognized certificates -->
         <div class="section certifications">
-        <h2>Certifications & Licenses</h2>
+         <h2>Certifications & Professional Development</h2>
         <ul>
+            <li><strong>Influential Communication</strong> (Bureau Zuidema)</li>
             <li><strong>Certified Kubernetes Application Developer</strong> (Linux Foundation)</li>
             <li><strong>Scrum PSPO I Certificate</strong> (Scrum.org)</li>
             <li><strong>Data Science in Python Certificate</strong> (DataCamp)</li>
