--- a/index.html
+++ b/index.html
@@ -116,22 +116,20 @@
         </div>
 
         <div class="section summary">
-    <h2>Summary</h2>
-    <p>
-        <strong>Cloud Data Architect</strong> with a proven track record in designing and implementing
-        scalable, cloud-native solutions on <strong>Microsoft Azure</strong>, processing billions of transactions monthly.
-        I specialize in <strong>real-time data analytics</strong>, <strong>event-driven architectures</strong>, and platforms like
-        <strong>Databricks, Kafka, and Azure Functions</strong> to drive intelligent decision-making and personalized
-        customer experiences.
-    </p>
-    <p>
-        Beyond technical expertise, I am a <strong>strategic leader</strong> who mentors engineering teams, fosters
-        innovation, and drives best practices in <strong>cloud architecture and data governance</strong>.
-        With experience spanning <strong>iGaming, retail, e-commerce, and fintech</strong>, I bridge the gap
-        between <strong>data strategy and execution</strong>, ensuring high-performance data ecosystems that support
-        both business growth and regulatory compliance.
-    </p>
-</div>
+            <h2>Summary</h2>
+            <p>
+                <strong>Experienced Data Leader</strong> with a track record of building and leading high-performing data teams,
+                driving strategic initiatives, and delivering scalable cloud-native solutions.
+                I specialize in <strong>real-time data processing</strong>, <strong>event-driven architectures</strong>,
+                and platforms like <strong>Azure, Databricks, and Kafka</strong> to enable intelligent decision-making
+                and personalized customer experiences.
+            </p>
+            <p>
+                Passionate about <strong>mentoring teams, defining best practices, and bridging business and technology</strong> to maximize data-driven value.
+                With experience across <strong>iGaming, retail, e-commerce, and fintech</strong>, I bring a blend of <strong>technical expertise,
+                strategic vision, and leadership</strong> to scale data platforms, streamline operations, and ensure regulatory compliance.
+            </p>
+        </div>
 
         <div class="section skills">
             <h2>Key Skills</h2>
