--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 var domain = "vanheijst.com";
                 document.write('<a href="mailto:' + user + '@' + domain + '">' + user + '@' + domain + '</a>');
             </script></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/hpfvanheijst" target="_blank">linkedin.com/in/hpfvanheijst</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/hiddevanheijst" target="_blank">linkedin.com/in/hpfvanheijst</a></p>
             <p>GitHub: <a href="https://github.com/HiddevH" target="_blank">github.com/HiddevH</a></p>
         </div>
 
